# FlyDSL

./: .gitignore  CMakeLists.txt  GPU_IMPL.md  LICENSE  MANIFEST.in  README.md  ROCIR_COORD_OPS.md  build.sh  build_in_docker.sh  build_llvm.sh  dumpir.sh  pyproject.toml  run_tests.sh  setup.py
.claude/skills/gpu-kernel-optimize/: SKILL.md
.claude/skills/mfma-kernel-dev/: SKILL.md
.claude/skills/mfma-kernel-patterns/: SKILL.md
.github/: runner-config.yml
.github/workflows/: build-whl.yaml  ci.yaml  docs.yml  flydsl.yaml  promote.yaml  sync-upstream.yaml  test-whl.yaml
docs/: ARCHITECTURE.md  Makefile  README.md  architecture_guide.md  conf.py  cute_layout_algebra_guide.md  cutedsl_to_flydsl_porting_guide.md  index.rst  installation.rst  kernel_authoring_guide.md  layout_system_guide.md  prebuilt_kernels_guide.md  quickstart.rst  requirements.txt  testing_benchmarking_guide.md
docs/api/: compiler.rst  dsl.rst  kernels.rst
docs/tutorials/: basic_usage.rst  index.rst  kernel_development.rst
examples/: gpu_matrix_ops.py
flir/: CMakeLists.txt  build.sh
flir/include/flir/: CMakeLists.txt  FlirAttrDefs.td  FlirDialect.h  FlirDialect.td  FlirLayoutAlgebra.h  FlirOps.h  FlirOps.td  FlirPasses.h  FlirPasses.td  FlirPatternAttr.h  FlirPython.td  FlirRocmDialect.h  FlirRocmDialect.td  FlirRocmOps.h  FlirRocmOps.td  FlirTypeDefs.td  FlirTypes.h
flir/lib/Dialect/: CMakeLists.txt
flir/lib/Transforms/: CMakeLists.txt  FlirDCE.cpp  FlirToStandard.cpp
flir/python_bindings/: CMakeLists.txt  flir.py
flir/python_bindings/dialects/: FlirOps.td
flir/python_bindings/runtime/: FlirRocmRuntimeWrappers.cpp
flir/tools/: CMakeLists.txt
flir/tools/flir-opt/: CMakeLists.txt  flir-opt.cpp
flydsl/: requirements.txt
flydsl/src/: _mlir
flydsl/src/flydsl/: __init__.py
include/cute/: CuteDialect.h  CuteDialect.td  CuteNvgpuDialect.td  CuteNvgpuOps.td  CuteOps.td  CutePasses.h  CutePasses.td  CuteRocmDialect.td  CuteRocmOps.td
include/rocir/: CMakeLists.txt  RocirDialect.h  RocirDialect.td  RocirLayoutAlgebra.h  RocirNvgpuDialect.td  RocirNvgpuOps.td  RocirOps.td  RocirPasses.h  RocirPasses.td  RocirRocmDialect.td  RocirRocmOps.td  RocirTypes.h
include/rocir-c/: RocirDialect.h
kernels/: __init__.py  flash_attention_v4.py  flash_attention_v4_1.py  flash_attention_v4_2.py  flash_attention_v4_3.py  layernorm_kernel.py  mfma_epilogues.py  mfma_preshuffle_pipeline.py  mixed_moe_gemm_2stage.py  mixed_preshuffle_gemm.py  moe_gemm_2stage.py  moe_reduce.py  preshuffle_gemm.py  reduce.py  rmsnorm_kernel.py  softmax_kernel.py
lib/: CMakeLists.txt
lib/CAPI/: CMakeLists.txt  RocirDialect.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Cute/: CuteDialect.cpp
lib/Dialect/Rocir/: CMakeLists.txt  RocirDialect.cpp  RocirLayoutAlgebra.cpp  (+1 more)
lib/Transforms/: CMakeLists.txt  CuteNvgpuToNvgpu.cpp  CuteToRocm.cpp  CuteToStandard.cpp  RocirCoordLowering.cpp  RocirDCE.cpp  RocirLayoutCanonicalize.cpp  RocirNvgpuToNvgpu.cpp  RocirToRocm.cpp  RocirToStandard.cpp
python/: README.md  requirements.txt  setup.py
python/cute_runtime/: __init__.py  bindings.cpp
python/examples/: __init__.py  basic_layout.py  layernorm_kernel.py  reduce.py  rmsnorm_kernel.py  softmax_kernel.py
python/mlir/: __init__.py  execution_engine.py  ir.py  passmanager.py  rewrite.py
python/rocdsl/: __init__.py  passes.py  rocir_opt_runner.py
python_bindings/: CMakeLists.txt  FlirRegisterPasses.cpp  RocirDialectModule.cpp  RocirPassesModule.cpp  RocirRegisterPasses.cpp  rocir.py
python_bindings/dialects/: ROCDLOps.td  RocirOps.td  flir.py  rocdl.py  rocir.py
samples/: __init__.py  basic_layout.py  layernorm_kernel.py  mfma_preshuffle_pipeline.py  moe_gemm_2stage.py  preshuffle_gemm.py  reduce.py  rmsnorm_kernel.py  softmax_kernel.py
scripts/: build_llvm.sh  build_wheels.sh  dumpir.sh  generate_summary.py  run_benchmark.sh  run_tests.sh  upload_wheels.sh
tests/: README.md  __init__.py  comprehensive_test.mlir  conftest.py  test_all_ops.mlir  test_all_product_divide.mlir  test_basic.mlir  test_common.py  test_cosize.mlir  test_get.mlir  test_idx2crd.mlir  test_layout.mlir  test_local_ops.mlir  test_ops.mlir  test_pass.mlir  test_rank.mlir  test_simple.mlir  test_size.mlir  utils.py
tests/benchmark/: matrixTranspose.py  matrix_transpose.py  per_token_quant_benchmark.py  vecAdd.py  vec_add.py
tests/kernels/: benchmark_common.py  gpu_common.py  test_eltwise_add.py  test_flash_attention_v4.py  test_flash_attention_v4_1.py  test_flash_attention_v4_2.py  test_flash_attention_v4_3.py  test_gemm.py  test_gpu_layout.py  test_gpu_rocdsl.py  test_gpu_simple.py  test_gpu_with_rocir_coords.py  test_layernorm.py  test_matrix_trans.py  test_moe_gemm.py  test_moe_reduce.py  test_preshuffle_gemm.py  test_quant.py  test_ref.py  test_rmsnorm.py  test_shared_working.py  test_softmax.py  test_vec_add.py
tests/mlir/: comprehensive_test.mlir  test_all_ops.mlir  test_all_product_divide.mlir  test_basic.mlir  test_chained.mlir  test_chained_operations.mlir  test_composition.mlir  test_coord_lowering.mlir  test_coord_lowering_dynamic.mlir  test_cosize.mlir  test_crd2idx.mlir  test_get.mlir  test_idx2crd.mlir  test_layout.mlir  test_layout_amd.mlir  test_local_ops.mlir  test_ops.mlir  test_pass.mlir  test_product_divide.mlir  test_rank.mlir  test_simple.mlir  test_size.mlir
tests/pyir/: test_arith_operators.py  test_basic_ops.py  test_lang_module_descriptors.py  test_layout_algebra.py  test_local_ops.py  test_nested_layouts.py  test_passes.py  test_product_divide.py  test_rocdl_ops.py  test_rocir_basic.py  test_rocir_coord_ops.py  test_rocir_divide.py  test_rocir_local.py  test_rocir_print.py  test_rocir_product.py  test_static_vs_dynamic.py
tests/python/: README.md  __init__.py  conftest.py  test_basic_ops.py  test_gpu_layout.py  test_gpu_rocdsl.py  test_local_ops.py  test_passes.py  test_product_divide.py  test_rocir_basic.py  test_rocir_divide.py  test_rocir_local.py  test_rocir_product.py  test_shared_working.py
tools/: CMakeLists.txt
tools/cute-opt/: cute-opt.cpp
tools/rocir-opt/: CMakeLists.txt  rocir-opt.cpp
(+167 files in other folders)
