[build-system]
requires = [
  "setuptools>=64",
  "wheel",
  # `setup.py` may invoke `./build.sh` which runs CMake configuration that expects
  # these Python build deps to be importable in the current environment.
  "pybind11>=2.10",
  "nanobind>=2.0",
  "numpy",
]
build-backend = "setuptools.build_meta"


